# goit-web-homework-7

./: README.md  config.ini  my_select.py  pyproject.toml  seed.py
migrations/versions/: 8e80d84b1d5c_init.py
src/: db.py  models.py
