[tool.poetry]
name = "goit-web-homework-7"
version = "0.1.0"
description = ""
authors = ["APodoba <APodoba@luxoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.8"
sqlalchemy = "^1.4.43"
faker = "^19.6.2"
alembic = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
